7.0
===

* Renamed the parameters to the IRC object. If you use a custom event loop
  and your code constructs the IRC object with keyword parameters, you will
  need to update your code to use the new names, so::

    IRC(fn_to_add_socket=adder, fn_to_remove_socket=remover, fn_to_add_timeout=timeout)

  becomes::

    IRC(on_connect=adder, on_disconnect=remover, on_schedule=timeout)

  If you don't use a custom event loop or you pass the parameters
  positionally, no change is necessary.

6.0.1
=====

* Fixed some unhandled exceptions in server client connections when the client
  would disconnect in response to messages sent after select was called.

6.0
===

* Moved `LineBuffer` and `DecodingLineBuffer` from client to buffer module.
  Backward-compatible references have been kept for now.
* Removed daemon mode and log-to-file options for server.
* Miscellaneous bugfixes in server.

5.1.1
=====

* Fix error in 2to3 conversion on irc/server.py (issue #11).

5.1
===

The IRC library is now licensed under the MIT license.

* Added irc/server.py, based on hircd by Ferry Boender.
* Added support for CAP command (pull request #10), thanks to Danneh Oaks.

5.0
===

Another backward-incompatible change. In irc 5.0, many of the unnecessary
getter functions have been removed and replaced with simple attributes. This
change addresses issue #2. In particular:

 - Connection._get_socket() -> Connection.socket (including subclasses)
 - Event.eventtype() -> Event.type
 - Event.source() -> Event.source
 - Event.target() -> Event.target
 - Event.arguments() -> Event.arguments

The `nm_to_*` functions were removed. Instead, use the NickMask class
attributes.

These deprecated function aliases were removed from irc.client::

 - parse_nick_modes -> modes.parse_nick_modes
 - parse_channel_modes -> modes.parse_channel_modes
 - generated_events -> events.generated
 - protocol_events -> events.protocol
 - numeric_events -> events.numeric
 - all_events -> events.all